--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,19 +8,21 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* Changed below 3 from .header to header */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* Changed .seo to span */
+header h1 span {
     color: #d9dcd6;
 }
 
@@ -51,8 +53,8 @@ p {
     font-size: 16px;
 }
 
-/* Removed background-image attribute */
-.hero {
+/* Removed background-image attribute and changed from .hero to #hero*/
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -70,13 +72,14 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* Changed class to id */
+#content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+#benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -87,55 +90,8 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+/* Changed classes to ids from line 141 to line 193 and reoganized order of styling */
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,7 +100,16 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+#search-engine-optimization img {
+    max-height: 200px;
+}
+
+#search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+#online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -153,7 +118,16 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing {
+#online-reputation-management img {
+    max-height: 200px;
+}
+
+#online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -162,40 +136,72 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+#social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+#social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+/* Changed classes to ids from lines 93 to 139 and reoganized order of styling */
+#benefit-lead {
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+#benefit-lead h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-.footer {
+#benefit-lead img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+#benefit-brand {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+#benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#benefit-brand img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+#benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+#benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+#benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* Changed footer class to id */
+#footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+#footer h2 {
     font-size: 20px;
 }
